Корректировка АПИ
